<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:tag="cards main container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:contentDescription="@string/app_name"
            android:cropToPadding="false"
            android:tag="image_tag"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:ellipsize="end"
                android:gravity="left|center"
                android:maxLines="2"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvStatus2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/shape_active"
                    android:gravity="top|right"
                    android:text="@string/status_example"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvClassHours2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|right"
                    android:text="@string/date_example"
                    android:textSize="9sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

</LinearLayout>