<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ddd"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lucasnascimento.android_crud_sqlite.activities.PersistCourseActivity"
    tools:showIn="@layout/activity_add_course">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:hint="@string/name_title"
                    android:inputType="textPersonName"
                    android:minHeight="45dp"/>

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/description_title"
                    android:inputType="textMultiLine"
                    android:minHeight="45dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:gravity="left"
                        android:text="Carga Horária" />

                    <TextView
                        android:id="@+id/tvClassHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="right"
                        android:text="10h" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.9"
                    android:gravity="left|center"
                    android:text="Status" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:checked="true"
                    android:gravity="right" />

            </LinearLayout>

            <Button
                android:id="@+id/btSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/save_title"
                android:textColor="#fff" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
